test/corpus/header.txt
===
header-from-to
===
From: name1 name2 <user1@example.com>
To: name1 "name <>" name3 <user2@example.com>

---

(source_file
  (header_email
    (header_field_email)
    (header_separator)
    (atom_block
      (atom)
      (atom))
    (email
      (email_delimiter)
      (email_address)
      (email_delimiter)))
  (header_email
    (header_field_email)
    (header_separator)
    (atom_block
      (atom)
      (quoted_string)
      (atom))
    (email
      (email_delimiter)
      (email_address)
      (email_delimiter))))

===
header-empty
===
From:

---

(source_file
  (header_email
    (header_field_email)
    (header_separator)))

===
header-empty-email
===
From: name1

---

(source_file
  (header_email
    (header_field_email)
    (header_separator)
    (atom_block
      (atom))))

      
===
header-email-only
===
From: person@test.com

---

(source_file
  (header_email
    (header_field_email)
    (header_separator)
    (email_address)))

===
header-email-capitalized
===
From: PERSON@TEST.COM

---

(source_file
  (header_email
    (header_field_email)
    (header_separator)
    (email_address)))

===
header-subject
===
Subject: some "subject

---


(source_file
  (header_subject
    (header_field_subject)
    (header_separator)
    (subject)))

===
header-subject-multiline
===
Subject: some "subject"
 that goes across lines

---


(source_file
  (header_subject
    (header_field_subject)
    (header_separator)
    (subject)))

===
header-other
===
X-ExtEditorR-Priority: normal
X-ExtEditorR-Delivery-Format: [auto]
X-ExtEditorR-Help: Some help

---

(source_file
  (header_other
    (header_field)
    (header_separator)
    (header_unstructured))
  (header_other
    (header_field)
    (header_separator)
    (header_unstructured))
  (header_other
    (header_field)
    (header_separator)
    (header_unstructured)))


===
header-other-multiline
===
X-SomeOtherHeader: whose value also includes a newline
 followed by space and more content

---

(source_file
  (header_other
    (header_field)
    (header_separator)
    (header_unstructured)))

===
header-other-multiline-with-body
===
X-SomeOtherHeader: whose value also includes a newline
 followed by space and more content

And then the body

---

(source_file
  (header_other
    (header_field)
    (header_separator)
    (header_unstructured))

  (body_separator)
  (body
    (body_block)))
